# liqai-desktop

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: .eslintrc.hooks.json  next.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/desktop/scripts/: generate-icon-source.mjs  phase5-preflight.mts  phase5-session-state-diagnostic.mts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 001_initial.sql  002_fee_snapshots.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/desktop/src/components/: ActivityLog.tsx  AuditRecorder.tsx  GelatoAutomatePanel.tsx  MintConfirmModal.tsx  MintPositionPreview.tsx  PositionsDashboard.tsx  RebalanceBotPanel.tsx  SaRecoveryPanel.tsx  SessionKeyPanel.tsx  SmartAccountStatus.tsx  WalletConnectQR.tsx  WalletStatus.tsx  WithdrawConfirmModal.tsx
apps/desktop/src/config/: wagmi.ts
apps/desktop/src/lib/: db.ts  debugLog.ts  feeSnapshots.ts  mintExecutor.ts  mintParams.ts  passphraseStrength.ts  rebalanceExecutor.ts  sessionKeyCrypto.ts  sessionKeyGuard.ts  sessionKeyInstall.ts  sessionKeyLoad.ts  sessionKeyPolicy.ts  uniswapSubgraph.ts  useAprMetrics.ts  useGasEstimate.ts  useIsMounted.ts  useKernelAccount.ts  (+7 more)
docs/: CHANGELOG-security.md  USER-GUIDE.md  architecture-v2.md  dev-setup.md  security-v2.md
(+5 files in other folders)
